@@ -3,6 +3,7 @@ log4j.rootLogger = TRACE,sysout
 log4j.category.org.apache.commons.httpclient = WARN
 log4j.category.org.apache.commons.httpclient.HttpMethodBase = ERROR
 log4j.category.httpclient = WARN
+log4j.category.del.icio.us = WARN
 log4j.appender.sysout=org.apache.log4j.ConsoleAppender
 log4j.appender.sysout.layout=org.apache.log4j.PatternLayout
 log4j.appender.sysout.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
